# quantstats

./: .gitignore  .travis.yml  CONTRIBUTORS.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: test-compatibility.yml
examples/: META-performance.html  cta_performance.ipynb  pnl-5000w市值.xlsx  yfinance.ipynb
quantstats/: __init__.py  _compat.py  _numpy_compat.py  plots.py  report.html  reports.py  stats.py  utils.py
quantstats/_plotting/: core.py  wrappers.py
tests/: conftest.py  test_comprehensive.py  test_download_filename.py  test_html_modifications.py  test_issue_467.py  test_issue_468.py  test_poetry_config.py
